--- a/valentine.html
+++ b/valentine.html
@@ -2,78 +2,64 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ma Valentine 💖</title>
-
+  <title>Ma Valentine 💘</title>
   <style>
     body {
-      margin: 0;
-      height: 100vh;
-      background: linear-gradient(135deg, #ff758c, #ff7eb3);
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       font-family: 'Arial', sans-serif;
       text-align: center;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+      padding-top: 80px;
+      color: #fff;
       overflow: hidden;
-      padding: 20px;
     }
 
     h1 {
-      font-size: 2.4em;
-      margin-bottom: 10px;
+      font-size: 3em;
+      margin-bottom: 20px;
     }
 
     p {
-      font-size: 1.2em;
-      margin-bottom: 25px;
-    }
-
-    h2 {
-      font-size: 1.8em;
-      margin-bottom: 30px;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 20px;
-      position: relative;
+      font-size: 1.4em;
+      margin-bottom: 40px;
     }
 
     button {
-      font-size: 1.1em;
-      padding: 15px 25px;
+      font-size: 1.2em;
+      padding: 15px 30px;
       border: none;
       border-radius: 30px;
       cursor: pointer;
+      position: relative;
     }
 
     #yes {
-      background-color: #ff2d55;
+      background-color: #ff4d6d;
       color: white;
+      margin-right: 20px;
     }
 
     #no {
-      background-color: white;
-      color: #ff2d55;
+      background-color: #fff;
+      color: #ff4d6d;
       position: absolute;
     }
 
     .heart {
       position: absolute;
-      font-size: 22px;
-      animation: float 4s linear infinite;
-      opacity: 0.8;
+      font-size: 24px;
+      animation: float 5s infinite ease-in;
+      opacity: 0.7;
     }
 
     @keyframes float {
-      from {
+      0% {
         transform: translateY(100vh);
         opacity: 0;
       }
-      to {
+      50% {
+        opacity: 1;
+      }
+      100% {
         transform: translateY(-10vh);
         opacity: 0;
       }
@@ -82,50 +68,43 @@
 </head>
 <body>
 
-  <h1>💘 Mon amour 💘</h1>
+  <h1>💖 Mon amour 💖</h1>
   <p>J’ai une question très importante…</p>
   <h2>Veux-tu être ma Valentine ? 💌</h2>
 
-  <div class="buttons">
-    <button id="yes" onclick="yes()">OUI 😍</button>
-    <button id="no" ontouchstart="moveNo()">Non 🙃</button>
-  </div>
-
-  <!-- 🎵 Musique -->
-  <audio id="music">
-    <source src="ElgrandeToto BLUE LOVE Lyrics video.mp3" type="audio/mpeg">
-  </audio>
+  <button id="yes" onclick="accept()">OUI 😍</button>
+  <button id="no" onmouseover="moveNo()">Non 🙃</button>
 
   <script>
-    function yes() {
-      const music = document.getElementById("music");
-      music.play();
-
+    function accept() {
       document.body.innerHTML = `
-        <h1>🥰 OUIII 🥰</h1>
+        <h1>🥰 Yesssss ! 🥰</h1>
         <p>Je savais que tu dirais oui ❤️</p>
-        <p>BLUE LOVE pour mon amour 💙</p>
-        <p>Je t’aime fort 💖</p>
+        <p>Je t’aime fort 💘</p>
       `;
     }
 
     function moveNo() {
       const no = document.getElementById("no");
       const x = Math.random() * (window.innerWidth - 100);
-      const y = Math.random() * (window.innerHeight - 60);
+      const y = Math.random() * (window.innerHeight - 50);
       no.style.left = x + "px";
       no.style.top = y + "px";
     }
 
-    // 💖 Pluie de cœurs
+    // Coeurs qui flottent
     setInterval(() => {
       const heart = document.createElement("div");
-      heart.className = "heart";
+      heart.classList.add("heart");
       heart.innerHTML = "❤️";
       heart.style.left = Math.random() * 100 + "vw";
+      heart.style.animationDuration = (Math.random() * 3 + 3) + "s";
       document.body.appendChild(heart);
-      setTimeout(() => heart.remove(), 4000);
-    }, 400);
+
+      setTimeout(() => {
+        heart.remove();
+      }, 5000);
+    }, 500);
   </script>
 
 </body>
