--- a/valentine.html
+++ b/valentine.html
@@ -210,9 +210,9 @@
 
 <body>
 
-    <!-- Audio romantique -->
+    <!-- Ta musique ElGrandeToto - Blue Love -->
     <audio id="loveMusic" loop preload="auto">
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-2.mp3" type="audio/mpeg">
+        <source src="Elgrandetoto BLUE LOVE Lyrics video.mp3" type="audio/mpeg">
     </audio>
 
     <div class="container" id="main">
