--- a/valentine.html
+++ b/valentine.html
@@ -216,8 +216,8 @@
 <body>
 
     <!-- Audio - chemin relatif pour GitHub Pages -->
-    <audio id="loveMusic" loop preload="auto">
-        <source src="./Elgrandetoto%20BLUE%20LOVE%20Lyrics%20video.mp3" type="audio/mpeg">
+    <audio id="loveMusic" loop playsinline>
+      <source src="tst.mp3" type="audio/mpeg">
     </audio>
 
     <!-- Bouton musique global (ne sera pas détruit) -->
@@ -370,3 +370,4 @@
 </body>
 
 </html>
+
